# Novagent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: roadmap.md
src/novagent/: __init__.py  config.py  main.py
src/novagent/models/: __init__.py  invoice.py  proposal.py  receipt.py  report.py
src/novagent/output/: __init__.py  builder.py
src/novagent/services/: __init__.py  invoice_service.py  proposal_service.py  receipt_service.py  report_service.py
src/novagent/templates/: __init__.py
src/novagent/templates/files/: __init__.py  invoice.html.j2  proposal.md.j2  receipt.md.j2  report.md.j2
tests/: test_phase2.py  test_placeholder.py
