[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novagent"
version = "0.1.0"
description = "Autonomous AI agency — Intelligence That Delivers"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.11"
authors = [
    {name = "WilfredthePELE"},
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.3",
]

[project.scripts]
novagent = "novagent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
